--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "qrcode.react": "^4.2.0",
