--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
