--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.1.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
